deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-application
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-application
  template:
    metadata:
      labels:
        app: iot-application
    spec:
      containers:
        - image: wil42/playground:v1
          name: iot-application
          ports:
          - containerPort: 8888
            name: http
            protocol: TCP
