service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-application
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: iot-application
