ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-routing
spec:
  rules:
  - host: iot-app.com
    http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot-application
            port:
              number: 8888
